<resources>
    <string name="app_name">LibrefixTvAndroid</string>
    <string name="browse_title">Libreflix</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="seasons">Seasons</string>
    <string name="watch">Assistir</string>
    <string name="fav">Favoritar</string>
    <string name="mark_as_watched">Já Vi</string>
    <string name="movie">Movie</string>
    <string name="serie">Serie</string>
    <string name="profile_icon_desc">Profile Icon</string>
    <string name="search_icon_desc">Search Icon</string>

    <string name="welcome">Boas Vindas</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="logo_desc">Logo of Librefix</string>
    <string name="qr_code_desc">QR Code for Login or Signup</string>
    <string name="fill_all_fields">Please fill in all fields</string>
    <string name="signup_successful">Signup successful!</string>
    <string name="login_successful">Login successful!</string>
    <string name="invalid_email_password">Invalid email or password</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>

    <string name="hello">Olá,</string>
    <string name="libre">Libre</string>
    <string name="glad_to_see_you">Que bom te ver por aqui!</string>
    <string name="signup_instruction">Para se cadastrar e se tornar libre, utilize o seu celular ou computador e leia o QR CODE</string>
    <string name="login_instruction">Utilize o QR Code pra acessar sua conta ou o e-mail e senha cadastrados</string>
    <string name="share">Compartilhar</string>
    <string name="add_to_favorites">Adicionar aos Favoritos</string>
    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
</resources>