<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CC000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"

        />

        <ImageView
            android:layout_width="600dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo_desc"
            android:src="@drawable/login_image" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="330dp"
                android:layout_height="110dp"
                android:layout_marginBottom="50dp"
                android:contentDescription="@string/logo_desc"
                android:src="@drawable/logo1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="20dp"
                android:text="@string/welcome"
                android:textColor="@android:color/white"
                android:textSize="38sp" />

            <Button
                android:id="@+id/button_login"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_login"
                android:text="@string/login"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button_signup"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_signup"
                android:text="@string/signup" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
