<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!-- Imagem de fundo -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login"
        android:scaleType="centerCrop" />

    <!-- Segunda imagem na posição correta -->

    <!-- Campo de entrada de email -->
    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="start|top"
        android:layout_marginStart="170dp"
        android:layout_marginTop="180dp"
        android:src="@drawable/frame" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:hint="@string/email"
        android:layout_marginLeft="200dp"
        android:textColorHint="#CCCCCC"
        android:textColor="#FFFFFF"
        android:layout_gravity="center"
        android:backgroundTint="#009688"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="24dp" />

    <!-- Campo de entrada de senha -->
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:hint="@string/password"
        android:textColorHint="#CCCCCC"
        android:layout_marginLeft="200dp"
        android:textColor="#FFFFFF"
        android:layout_gravity="center"
        android:backgroundTint="#009688"
        android:inputType="textPassword"
        android:layout_marginTop="44dp" />

    <!-- Botão de login -->
    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="200dp"
        android:background="@drawable/button_selected"
        android:text="@string/login"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/buttonSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_selected"
        android:text="Skip Login"
        android:textColor="#FFFFFF" />

</FrameLayout>
