<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/details_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".DetailsActivity"
    tools:deviceIds="tv">



    <ImageView
        android:id="@+id/details_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginBottom="16dp"
        android:scaleType="centerCrop"
        android:contentDescription="Imagem do pôster do filme" />


    <!-- Conteúdo principal -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Imagem do pôster do filme -->
           <View
               android:layout_width="wrap_content"
               android:layout_height="300dp"/>

            <!-- Título do filme -->
            <TextView
                android:id="@+id/details_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MovieTitleStyle"
                android:text="Título do Filme" />

            <!-- Descrição/Sinopse do filme -->


            <!-- Ações (botões) -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="100dp"
                    android:layout_marginRight="70dp">

                    <TextView
                        android:id="@+id/details_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/MovieDescriptionStyle"
                        android:textSize="12dp"
                        android:text="Sinopse do filme aparece aqui." />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >


                <Button
                    android:id="@+id/action_watch"
                    style="@style/ActionButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="300dp"
                    android:text="@string/watch" />

                <Button
                    android:id="@+id/action_watched"
                    style="@style/ActionButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mark_as_watched" />

                <Button
                    android:id="@+id/action_add_to_favorites"
                    style="@style/ActionButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_to_favorites" />
                </LinearLayout>
            </LinearLayout>

            <!-- Filmes relacionados -->
            <TextView
                android:id="@+id/related_movies_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/RelatedMoviesHeaderStyle"
                android:text="@string/related_movies" />

            <androidx.leanback.widget.HorizontalGridView
                android:id="@+id/related_movies_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:horizontalSpacing="16dp"
                android:verticalSpacing="8dp"
                android:numColumns="auto_fit"
                android:gravity="center" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>
